#347 Minor enhancements